tests/examples/good/misc/good001.lat
// Just main

int main() {
    return 0;
}

boolean f() {
    return true;
}