tests/examples/bad/duplicate_function_argument2.lat
int main() {
    return 1;
}

int f(int a, bool a) { return 1; }